Update ResultToRecordTransformer.java